--- a/Imagenes/Jar/Dockerfile
+++ b/Imagenes/Jar/Dockerfile
@@ -2,5 +2,5 @@ FROM java:8-jre-alpine
 
 ADD ./dist/PrivaliaSpringProject-0.0.1-SNAPSHOT.jar .
 ADD ./dist/lib ./lib
-
+CMD java -jar PrivaliaSpringProject-0.0.1-SNAPSHOT.jar
 MAINTAINER "Javier Lllorente <javier.llorente@avanttic.com>" 
