--- a/Imagenes/WebService/Dockerfile
+++ b/Imagenes/WebService/Dockerfile
@@ -2,4 +2,5 @@ FROM java:8-jre-alpine
 
 ADD ./dist/PrivaliaSpringBootProject-0.0.1-SNAPSHOT.jar .
 CMD java -jar PrivaliaSpringBootProject-0.0.1-SNAPSHOT.jar
+EXPOSE 80
 MAINTAINER "Javier Lllorente <javier.llorente@avanttic.com>"  
