--- a/Imagenes/WebService/Dockerfile
+++ b/Imagenes/WebService/Dockerfile
@@ -2,5 +2,6 @@ FROM java:8-jre-alpine
 
 ADD ./dist/PrivaliaSpringBootProject-0.0.1-SNAPSHOT.jar .
 EXPOSE 8080
+VOLUME /tmp
 CMD java -jar PrivaliaSpringBootProject-0.0.1-SNAPSHOT.jar
 MAINTAINER "Javier Lllorente <javier.llorente@avanttic.com>"  
